--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,23 @@
 {
-    "version":2,
-    "builds":[
-        {"src":"*.js", "use" : "@vercel/node"}
-    ],
-    "routes":[
+    "version": 2,
+    "builds": [
         {
-            "src":"/(.*)",
-            "dest":"/"
+            "src": "*.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/upload",
+            "dest": "/upload"
+        },
+        {
+            "src": "/extract",
+            "dest": "/extract"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
