--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,8 @@
         "dest": "./server.js",
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers": {
-          "Access-Control-Allow-Origin": "https://pdf-uploader-client-8lof.vercel.app"
+          "Access-Control-Allow-Origin": "https://pdf-uploader-client-8lof.vercel.app",
+          "Access-Control-Allow-Credentials" : true
         }
       }
     ]
