--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
         "headers": {
           "Access-Control-Allow-Origin": "https://pdf-uploader-client-8lof.vercel.app",
-          "Access-Control-Allow-Credentials" : true
+          "Access-Control-Allow-Credentials" : "true"
         }
       }
     ]
