--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "./server.js",
+        "src": "server.js",
         "use": "@vercel/node"
       }
     ],
-    "routes": [
+    "headers": [
       {
-        "src": "/(.*)",
-        "dest": "./server.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Origin": "https://pdf-uploader-client-8lof.vercel.app",
-          "Access-Control-Allow-Credentials" : "true"
-        }
+        "source": "/(.*)",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "https://pdf-uploader-client-8lof.vercel.app" },
+          { "key": "Access-Control-Allow-Credentials", "value": "true" }
+        ]
       }
     ]
   }
+  
