--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,15 @@
         "use": "@now/node"
       }
     ],
-    "headers": [
+    "routes": [
       {
         "src": "/(.*)",
-        "dest":"server.js",
-        "headers": [
-          { "key": "Access-Control-Allow-Origin", "value": "https://pdf-uploader-client-8lof.vercel.app" },
-          { "key": "Access-Control-Allow-Credentials", "value": "true" }
-        ]
+        "dest": "server.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Origin": "https://pdf-uploader-client-8lof.vercel.app",
+          "Access-Control-Allow-Credentials" : "true"
+        }
       }
     ]
   }
-  
